--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Vlastní prvky (Automatic Translation)
 field-types-sidebar-title=Přidat prvky (Automatic Translation)
 field-validation-failed=Vlastní pole ověření se nezdařilo. (Automatic Translation)
 field-visibility-expression=Výraz pole viditelnosti (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Název parametru filtru (Automatic Translation)
 form-entries=Formulář položky (Automatic Translation)
 form-settings=Nastavení formuláře (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Přejít na stránku (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Klíčové slovo (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Opustit formulář? (Automatic Translation)
 leave-page=Opustit
 manage-templates=Spravovat šablony
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Ne, pokračujte. (Automatic Translation)
 no-data-providers-were-found=Nebyly nalezeny žádné zprostředkovatele dat. (Automatic Translation)
 no-element-sets-were-found=Nebyly nalezeny žádné sady prvků. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Nebyly nalezeny žádné formuláře. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Uložit formulář (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Ukládání (Automatic Translation)
 script-file=Soubor se skriptem
-section-field-type-label=Skupina polí (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Vyberte existující formulář nebo přidat formulář, který se má zobrazit v této aplikaci. (Automatic Translation)
 select-field-type-description=Vyberte možnosti ze seznamu. (Automatic Translation)
 select-field-type-label=Vyberte ze seznamu (Automatic Translation)
