--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Egyéni elemek
 field-types-sidebar-title=Elemek hozzáadása
 field-validation-failed=Az egyik saját mező érvényesítése sikertelen.
 field-visibility-expression=Mező láthatósági kifejezés
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Paraméternév szűrése
 form-entries=Űrlap adatok
 form-settings=Űrlap beállítások
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Ugrás az oldalra
 jump-to-page-x=Ugrás a {0} oldalra
 keyword=Kulcsszó
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Elhagyja az űrlapot?
 leave-page=Kilépés
 manage-templates=Sablonok kezelése
@@ -210,6 +212,7 @@ new-x-form-submitted=Új {0} űrlap lett beküldve
 no-continue=Nem, folytatás.
 no-data-providers-were-found=Nem található adat szolgáltató.
 no-element-sets-were-found=Nem található elemcsoport.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Nem találhatóak űrlapok.
 no-value-is-defined-for-field-x=A {0} mezőhöz nincs érték definiálva.
 no-x-were-found=Nem található {0}.
@@ -270,7 +273,6 @@ save-form=Űrlap mentése
 saved-x=Elmentve &#149; {0}
 saving=Mentés
 script-file=Szkript fájl
-section-field-type-label=Mezők csoport
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Válassz ki egy létező űrlapot vagy hozz létre egy újat, ami megjelenik ebben az alkalmazásban.
 select-field-type-description=Válasszon egy vagy több lehetőséget egy listából.
 select-field-type-label=Válasszon a listából
