--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Unsur-unsur yang disesuaikan (Automatic Translat
 field-types-sidebar-title=Menambahkan elemen (Automatic Translation)
 field-validation-failed=Bidang kustom validasi gagal. (Automatic Translation)
 field-visibility-expression=Bidang visibilitas ekspresi (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Parameter nama penyaring (Automatic Translation)
 form-entries=Formulir entri (Automatic Translation)
 form-settings=Bentuk pengaturan (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Langsung ke halaman (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Kata kunci (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Meninggalkan bentuk? (Automatic Translation)
 leave-page=Meninggalkan
 manage-templates=Mengelola Template
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Tidak, terus. (Automatic Translation)
 no-data-providers-were-found=Penyedia data tidak ditemukan. (Automatic Translation)
 no-element-sets-were-found=Set elemen yang ditemukan. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Tidak ada bentuk yang ditemukan. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Menyimpan formulir (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Tabungan (Automatic Translation)
 script-file=Script File (Automatic Translation)
-section-field-type-label=Kelompok Fields (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Pilih bentuk yang ada atau menambahkan bentuk yang akan ditampilkan dalam aplikasi ini. (Automatic Translation)
 select-field-type-description=Pilih opsi dari daftar. (Automatic Translation)
 select-field-type-label=Pilih dari daftar (Automatic Translation)
