--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Elementi personalizzati (Automatic Translation)
 field-types-sidebar-title=Aggiungere elementi (Automatic Translation)
 field-validation-failed=Validazione campo personalizzato fallita.
 field-visibility-expression=Espressione di visibilità del campo
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nome del parametro di filtro (Automatic Translation)
 form-entries=Elementi Modulo
 form-settings=Impostazioni Modulo
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Passare alla pagina (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Parola chiave (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Lasciare il modulo? (Automatic Translation)
 leave-page=Esci
 manage-templates=Gestisci Modello
@@ -210,6 +212,7 @@ new-x-form-submitted=Nuovo Modulo {0} Sottomesso
 no-continue=No, continua.
 no-data-providers-were-found=Nessun provider dati trovato.
 no-element-sets-were-found=Nessun set di elemento sono stato trovato. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Nessona form trovata.
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=Nessun {0} trovato.
@@ -270,7 +273,6 @@ save-form=Salvare il modulo (Automatic Translation)
 saved-x=Salvato &#149; {0}
 saving=Salvataggio in corso
 script-file=File Script
-section-field-type-label=Gruppo Campi (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Seleziona un form esistente o aggiungi un form da visualizzare in questa applicazione.
 select-field-type-description=Selezionare le opzioni da un elenco. (Automatic Translation)
 select-field-type-label=Selezionare dall'elenco (Automatic Translation)
