--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_iw.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=אלמנטים מותאמים אישית
 field-types-sidebar-title=הוסף אלמנטים
 field-validation-failed=אימות שדה מותאם אישית נכשל.
 field-visibility-expression=ביטוי נראות שדה
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=שם פרמטר המסנן
 form-entries=רשומות טפסים
 form-settings=הגדרות טופס
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=קפוץ לעמוד
 jump-to-page-x=קפוץ לעמוד {0}
 keyword=מילת מפתח (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=לצאת מהטופס?
 leave-page=לעזוב
 manage-templates=נהל תבניות
@@ -210,6 +212,7 @@ new-x-form-submitted=טופס {0} חדש הוגש
 no-continue=לא, המשך.
 no-data-providers-were-found=לא נמצאו ספקי נתונים.
 no-element-sets-were-found=לא נמצאו ערכות אלמנטים.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=לא נמצאו טפסים.
 no-value-is-defined-for-field-x=לא מוגדר כל ערך עבור השדה {0}.
 no-x-were-found=לא נמצאו {0}.
@@ -270,7 +273,6 @@ save-form=שמור טופס
 saved-x=נשמרה &#149; {0}
 saving=שומר
 script-file=קובץ סקריפט
-section-field-type-label=הקבוצה ' שדות ' (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=בחר טופס קיים או הוסף טופס להצגה ביישום זה.
 select-field-type-description=בחר אפשרות אחת או יותר מרשימה.
 select-field-type-label=בחר מרשימה
