--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_lt.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Tinkinamų elementų (Automatic Translation)
 field-types-sidebar-title=Pridėti elementus (Automatic Translation)
 field-validation-failed=Pasirinktinio lauko tikrinimas nepavyko. (Automatic Translation)
 field-visibility-expression=Lauko matomumas išraiška (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filtras parametro pavadinimas (Automatic Translation)
 form-entries=Formų įrašus (Automatic Translation)
 form-settings=Formos Parametrai (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Peršokti į puslapį (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Raktinis žodis (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Palikti formą? (Automatic Translation)
 leave-page=Atostogos (Automatic Translation)
 manage-templates=Tvarkyti ruošinius (Automatic Translation)
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Ne, toliau. (Automatic Translation)
 no-data-providers-were-found=Nerasta jokių duomenų teikėjų. (Automatic Translation)
 no-element-sets-were-found=Jokių elementų rinkinių nerasta. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Nerasta jokių formų. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Išsaugoti formą (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Taupymo (Automatic Translation)
 script-file=Scenarijaus failas (Automatic Translation)
-section-field-type-label=Laukų grupė (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Pasirinkite esamą formą arba forma turi būti rodomi šioje paraiškoje. (Automatic Translation)
 select-field-type-description=Pasirinkite parinktis iš sąrašo. (Automatic Translation)
 select-field-type-label=Pasirinkite iš sąrašo (Automatic Translation)
