--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Tilpassede elementer
 field-types-sidebar-title=Legg til elementer
 field-validation-failed=En egendefinert feltvalidering feilet.
 field-visibility-expression=Feltsynlighetsuttrykk
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filterparameternavn
 form-entries=Skjemainnlegg
 form-settings=Skjemainnstillinger
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Hopp til side
 jump-to-page-x=Hopp til side {0}
 keyword=Nøkkelord
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Forlat skjema?
 leave-page=Forlate/la være
 manage-templates=Administrer maler
@@ -210,6 +212,7 @@ new-x-form-submitted=Ny {0} skjema innsendt
 no-continue=Nei, fortsett.
 no-data-providers-were-found=Ingen datatilbydere ble funnet.
 no-element-sets-were-found=Ingen elementsamlinger ble funnet.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Ingen skjema ble funnet.
 no-value-is-defined-for-field-x=Ingen verdier angitt for feltet {0}.
 no-x-were-found=Ingen {0} ble funnet.
@@ -270,7 +273,6 @@ save-form=Lagre skjema
 saved-x=Lagret &#149; {0}
 saving=Lagrer
 script-file=Skript-fil
-section-field-type-label=Feltgruppe
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Velg et eksisterende skjema eller legg til et skjema som skal vises i denne applikasjonen.
 select-field-type-description=Velg en eller flere valg fra en liste.
 select-field-type-label=Velg fra liste
