--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Aangepaste elementen
 field-types-sidebar-title=Elementen toevoegen
 field-validation-failed=Een aangepaste veldvalidatie is mislukt.
 field-visibility-expression=Veld zichtbaarheidsexpressie
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Naam filterparameter
 form-entries=Formulierinzendingen
 form-settings=Formulierinstellingen
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Ga naar pagina
 jump-to-page-x=Ga naar pagina {0}
 keyword=Sleutelwoord
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Formulier afsluiten?
 leave-page=Verlaten
 manage-templates=Sjablonen beheren
@@ -210,6 +212,7 @@ new-x-form-submitted=Nieuw {0} formulier ingestuurd
 no-continue=Nee, ga verder.
 no-data-providers-were-found=Er zijn geen dataproviders gevonden.
 no-element-sets-were-found=Geen elementensets gevonden.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Er werden geen formulieren gevonden.
 no-value-is-defined-for-field-x=Geen waarde gedefinieerd voor het veld {0}.
 no-x-were-found=Geen {0} gevonden.
@@ -270,7 +273,6 @@ save-form=Formulier opslaan
 saved-x=Opgeslagen &#149; {0}
 saving=Opslaan
 script-file=Scriptbestand
-section-field-type-label=Veldengroep
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selecteer een bestaand formulier of voeg een nieuw formulier toe voor deze toepassing
 select-field-type-description=Kies een of meer opties uit een lijst.
 select-field-type-label=Kies uit lijst
