--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Elemente personalizate (Automatic Translation)
 field-types-sidebar-title=Adauga elemente (Automatic Translation)
 field-validation-failed=O validare câmp particularizat nu a reuşit. (Automatic Translation)
 field-visibility-expression=Câmp expresie de vizibilitate (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nume de parametru filtru (Automatic Translation)
 form-entries=Înregistrările din formulare (Automatic Translation)
 form-settings=Setările de forma (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Sari la pagina (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Cuvinte cheie (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Lasa forma? (Automatic Translation)
 leave-page=Paraseste
 manage-templates=Gestionează Șabloane
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Nu, continua. (Automatic Translation)
 no-data-providers-were-found=Furnizori de date nu au fost găsite. (Automatic Translation)
 no-element-sets-were-found=S-au găsit nici un element de seturi. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Forme nu au fost găsite. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Salvaţi formularul (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Salvarea (Automatic Translation)
 script-file=Fişier de script (Automatic Translation)
-section-field-type-label=Grupă câmpuri (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selectaţi o machetă existentă sau pentru a adăuga o formă pentru a fi afişate în această aplicaţie. (Automatic Translation)
 select-field-type-description=Selectați opțiuni dintr-o listă. (Automatic Translation)
 select-field-type-label=Selectaţi din lista (Automatic Translation)
