--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Prilagojene elemente (Automatic Translation)
 field-types-sidebar-title=Dodajanje elementov (Automatic Translation)
 field-validation-failed=A preverjanje polja po meri ni uspelo. (Automatic Translation)
 field-visibility-expression=Polje vidnosti izraz (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Ime parametra filtra (Automatic Translation)
 form-entries=Vnose za obrazce (Automatic Translation)
 form-settings=Nastavitve obrazca (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Skoči na stran (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ključne besede (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Pusti obrazec? (Automatic Translation)
 leave-page=Zapusti
 manage-templates=Uredi predloge
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Ne, Nadaljuj. (Automatic Translation)
 no-data-providers-were-found=Noben ponudnik podatkov je bilo ugotovljeno. (Automatic Translation)
 no-element-sets-were-found=Ne določa element je bilo ugotovljeno. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Obrazcev ni bilo mogoče najti. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Shranite obrazec (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Varčevanje (Automatic Translation)
 script-file=Skript datoteke (Automatic Translation)
-section-field-type-label=Skupina polj (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Izberite obstoječ obrazec ali dodati obrazec, prikazan v tej vlogi. (Automatic Translation)
 select-field-type-description=Izberite mo3/4nosti s seznama. (Automatic Translation)
 select-field-type-label=Izberite iz seznama (Automatic Translation)
