--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Anpassade element
 field-types-sidebar-title=Lägg till element
 field-validation-failed=Det gick inte att validera anpassat fält.
 field-visibility-expression=Fältets synlighetsuttryck
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Namn på filterparameter
 form-entries=Formulärinlägg
 form-settings=Formulärinställningar
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Hoppa till sida
 jump-to-page-x=Hoppa till sida {0}
 keyword=Nyckelord
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Lämna formulär?
 leave-page=Lämna
 manage-templates=Hantera mallar
@@ -210,6 +212,7 @@ new-x-form-submitted=Nytt {0}-formulär har skickats in
 no-continue=Nej, fortsätt.
 no-data-providers-were-found=Ingen dataprovider hittades.
 no-element-sets-were-found=Inga elementuppsättningar hittades.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Inga formulär hittades.
 no-value-is-defined-for-field-x=Inga värden har definierats för fältet {0}.
 no-x-were-found=Ingen {0} har hittats.
@@ -270,7 +273,6 @@ save-form=Spara formulär
 saved-x=Sparade &#149; {0}
 saving=Sparar
 script-file=Skriptfil
-section-field-type-label=Fältgrupp
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Välj ett befintligt formulär eller lägg till ett formulär som visas i den här applikationen.
 select-field-type-description=Välj ett eller fler alternativ från en lista.
 select-field-type-label=Välj från lista
