--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_tr.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Özelleştirilmiş öğeler (Automatic Translati
 field-types-sidebar-title=Öğeler eklemek (Automatic Translation)
 field-validation-failed=Bir özel alan doğrulaması başarısız oldu. (Automatic Translation)
 field-visibility-expression=Alan görünürlük ifade (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filtre parametresi adı (Automatic Translation)
 form-entries=Form girişlerini (Automatic Translation)
 form-settings=Form ayarları (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Sayfaya atlamak (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Anahtar kelime (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Formdan çıkın? (Automatic Translation)
 leave-page=Ayrıl/Vazgeç
 manage-templates=Şablonları Yönet
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Hayır, devam et. (Automatic Translation)
 no-data-providers-were-found=Herhangi bir veri sağlayıcısı bulunamadı. (Automatic Translation)
 no-element-sets-were-found=Öğe kümesi yok bulundu. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Hiçbir form bulunamadı. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Formu Kaydet (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Kaydetme (Automatic Translation)
 script-file=Komut dosyası (Automatic Translation)
-section-field-type-label=Alanlar Grubu (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Bu uygulamada görünmesini forma ekleme veya varolan bir formu seçin. (Automatic Translation)
 select-field-type-description=Listeden seçenekleri seçin. (Automatic Translation)
 select-field-type-label=Listeden seçin (Automatic Translation)
