--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_vi.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Tùy chỉnh các yếu tố (Automatic Translat
 field-types-sidebar-title=Thêm các yếu tố (Automatic Translation)
 field-validation-failed=Xác nhận lĩnh vực tùy chỉnh thất bại. (Automatic Translation)
 field-visibility-expression=Lĩnh vực khả năng hiển thị biểu hiện (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Tên bộ lọc tham số (Automatic Translation)
 form-entries=Mẫu mục (Automatic Translation)
 form-settings=Cài đặt hình thức (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Chuyển đến trang (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Từ khóa (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Để lại hình thức? (Automatic Translation)
 leave-page=Rời khỏi
 manage-templates=Quản lý biểu mẫu
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Không, tiếp tục. (Automatic Translation)
 no-data-providers-were-found=Không có nhà cung cấp dữ liệu đã được tìm thấy. (Automatic Translation)
 no-element-sets-were-found=Không có bộ nguyên tố đã được tìm thấy. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Các hình thức không được tìm thấy. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Lưu mẫu (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Tiết kiệm (Automatic Translation)
 script-file=Tập tin script
-section-field-type-label=Nhóm Fields (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Chọn một hình thức hiện tại hoặc thêm một hình thức sẽ được hiển thị trong ứng dụng này. (Automatic Translation)
 select-field-type-description=Chọn tùy chọn từ danh sách. (Automatic Translation)
 select-field-type-label=Chọn từ danh sách (Automatic Translation)
