--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=العناصر المخصصة
 field-types-sidebar-title=إضافة عناصر
 field-validation-failed=فشل التحقق من صحة الحقل المخصص.
 field-visibility-expression=تعبير رؤية الحقل
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=اسم معلمة التصفية
 form-entries=إدخالات النماذج
 form-settings=إعدادات النموذج
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=انتقال إلى صفحة
 jump-to-page-x=انتقال إلى صفحة {0}
 keyword=كلمة رئيسية
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=ترك النموذج؟
 leave-page=غادر
 manage-templates=عرض الهياكل
@@ -210,6 +212,7 @@ new-x-form-submitted=النموذج {0} الجديد المرسل
 no-continue=لا، متابعة.
 no-data-providers-were-found=لم يتم العثور على موفري بيانات.
 no-element-sets-were-found=لم يتم العثور على مجموعات عناصر.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=لم يتم العثور على نماذج.
 no-value-is-defined-for-field-x=لا توجد قيمة محددة للحقل {0}.
 no-x-were-found=لم يتم العثور على {0}.
@@ -270,7 +273,6 @@ save-form=نموذج الحفظ
 saved-x=محفوظ &#149; {0}
 saving=حفظ
 script-file=ملف برنامج نصي
-section-field-type-label=مجموعة الحقول
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=حدد نموذجًا موجودًا أو أضف نموذجًا ليتم عرضه في هذا التطبيق.
 select-field-type-description=اختر خيارًا واحدًا أو أكثر من القائمة.
 select-field-type-label=تحديد من القائمة
