--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_bg.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Персонализирани елементи 
 field-types-sidebar-title=Добавяне на елементи (Automatic Translation)
 field-validation-failed=Неуспешна проверка на потребителско поле. (Automatic Translation)
 field-visibility-expression=Областта видимостта израз (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Параметър име на филтър (Automatic Translation)
 form-entries=Записи на формуляри (Automatic Translation)
 form-settings=Настройки за формуляри (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Направо към страница (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ключова дума (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Оставете формата? (Automatic Translation)
 leave-page=Напускане
 manage-templates=Управление на шаблони
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Не, продължи. (Automatic Translation)
 no-data-providers-were-found=Няма данни доставчици са намерени. (Automatic Translation)
 no-element-sets-were-found=Няма елемент комплекти са открити. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Не формуляри са намерени. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Запиши формуляра (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Записване (Automatic Translation)
 script-file=Скрипт файл (Automatic Translation)
-section-field-type-label=Група полета (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Изберете съществуващ формуляр или добавите формуляр да се показват в това приложение. (Automatic Translation)
 select-field-type-description=Изберете опции от списък. (Automatic Translation)
 select-field-type-label=Изберете от списъка (Automatic Translation)
