--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Elements personalitzats
 field-types-sidebar-title=Afegeix elements
 field-validation-failed=Validació de camp personalitzat fallida.
 field-visibility-expression=Expressió per la visibilitat del camp
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nom del paràmetre de filtre
 form-entries=Entrades de formularis
 form-settings=Configuració del formulari
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Salta a la pàgina
 jump-to-page-x=Salta a la pàgina {0}
 keyword=Paraula clau
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Sortir del formulari?
 leave-page=Abandona
 manage-templates=Gestiona les plantilles
@@ -210,6 +212,7 @@ new-x-form-submitted=Nou formulari {0} enviat
 no-continue=No, continuar,
 no-data-providers-were-found=No s'ha trobat cap proveïdor de dades.
 no-element-sets-were-found=No s'ha trobat cap conjunt d'elements.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=No s'ha trobat cap formulari.
 no-value-is-defined-for-field-x=No s'ha definit cap valor per al camp {0}.
 no-x-were-found=No s'ha trobat cap {0}.
@@ -270,7 +273,6 @@ save-form=Desa el formulari
 saved-x=Desat &#149; {0}
 saving=Guardant
 script-file=Fitxer script
-section-field-type-label=Grup de camps
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Seleccioneu un formulari existent o afegiu un nou formulari a mostrar dins d'aquesta aplicació.
 select-field-type-description=Tria una o més opcions d'una llista.
 select-field-type-label=Selecciona de la llista
