--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_el.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Προσαρμοσμένα στοιχεία (Aut
 field-types-sidebar-title=Προσθήκη στοιχείων (Automatic Translation)
 field-validation-failed=Ένα προσαρμοσμένο πεδίο η επικύρωση απέτυχε. (Automatic Translation)
 field-visibility-expression=Πεδίο ορατότητας έκφραση (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Η παράμετρος όνομα φίλτρου (Automatic Translation)
 form-entries=Καταχωρήσεις σε φόρμες (Automatic Translation)
 form-settings=Μορφή ρυθμίσεις (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Μετάβαση στη σελίδα (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Λέξη-κλειδί (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Αφήστε τη φόρμα; (Automatic Translation)
 leave-page=Αποχώρηση
 manage-templates=Διαχείριση προτύπων
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Όχι, συνεχίστε. (Automatic Translation)
 no-data-providers-were-found=Βρέθηκαν δεν υπηρεσίες παροχής δεδομένων. (Automatic Translation)
 no-element-sets-were-found=Βρέθηκαν κανένα στοιχείο σύνολα. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Μορφές δεν βρέθηκαν. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Αποθήκευση φόρμας (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Εξοικονόμηση (Automatic Translation)
 script-file=Κρυπτογραφημένο αρχείο δέσμης ενεργειών (Automatic Translation)
-section-field-type-label=Ομάδα πεδίων (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Επιλέξτε μια υπάρχουσα φόρμα ή να προσθέσετε μια φόρμα που θα εμφανίζονται σε αυτήν την εφαρμογή. (Automatic Translation)
 select-field-type-description=Επιλέξτε επιλογές από μια λίστα. (Automatic Translation)
 select-field-type-label=Επιλέξτε από τη λίστα (Automatic Translation)
