--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_en.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Customized Elements
 field-types-sidebar-title=Add Elements
 field-validation-failed=A custom field validation failed.
 field-visibility-expression=Field Visibility Expression
+fieldset-field-type-label=Fields Group
 filter-parameter-name=Filter Parameter Name
 form-entries=Form Entries
 form-settings=Form Settings
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Jump to Page
 jump-to-page-x=Jump to Page {0}
 keyword=Keyword
+last-entry-sent-x=Last entry sent {0}
 leave-form=Leave form?
 leave-page=Leave
 manage-templates=Manage Templates
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted
 no-continue=No, continue.
 no-data-providers-were-found=No data providers were found.
 no-element-sets-were-found=No element sets were found.
+no-entry-submitted-yet=No entry submitted yet.
 no-forms-were-found=No forms were found.
 no-value-is-defined-for-field-x=No value is defined for field {0}.
 no-x-were-found=No {0} were found.
@@ -270,7 +273,6 @@ save-form=Save Form
 saved-x=Saved &#149; {0}
 saving=Saving
 script-file=Script File
-section-field-type-label=Fields Group
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Select an existing form or add a form to be displayed in this application.
 select-field-type-description=Select options from a list.
 select-field-type-label=Select from List
