--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Elementos personalizados
 field-types-sidebar-title=Añadir elementos
 field-validation-failed=La validación de un campo personalizado ha fallado
 field-visibility-expression=Expresión de visibilidad del campo
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nombre de parámetro de filtro
 form-entries=Registros de formularios
 form-settings=Configuraciones del formulario
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Ir a la página
 jump-to-page-x=Ir a la página {0}
 keyword=Palabra clave
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=¿Salir del formulario?
 leave-page=Salir
 manage-templates=Administrar plantillas
@@ -210,6 +212,7 @@ new-x-form-submitted=Nuevo formulario {0} enviado
 no-continue=No, continuar
 no-data-providers-were-found=No se ha encontrado ningún proveedor de datos.
 no-element-sets-were-found=No se encontraron conjuntos de elementos.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=No se ha encontrado ningún formulario.
 no-value-is-defined-for-field-x=No se definió ningún valor para el campo {0}.
 no-x-were-found=No se encontraron {0}.
@@ -270,7 +273,6 @@ save-form=Guardar formulario
 saved-x=Guardado &#149; {0}
 saving=Guardando
 script-file=Archivo de script
-section-field-type-label=Grupo de campos
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Seleccione un formulario existente o añada un formulario para ser mostrado en esta aplicación.
 select-field-type-description=Seleccione una o más opciones de una lista.
 select-field-type-label=Seleccionar de lista
