--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Kohandatud elementide (Automatic Translation)
 field-types-sidebar-title=Lisada elemente (Automatic Translation)
 field-validation-failed=Kohandatud välja valideerimine nurjus. (Automatic Translation)
 field-visibility-expression=Väli nähtavus avaldis (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filter parameetri nimi (Automatic Translation)
 form-entries=Vormi kanded (Automatic Translation)
 form-settings=Vormi sätted (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Leheküljele liikumiseks (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Märksõna (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Jäta vorm? (Automatic Translation)
 leave-page=Lahku
 manage-templates=Mallide haldamine
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Ei, Jätka. (Automatic Translation)
 no-data-providers-were-found=Andmete esitajatele ei leitud. (Automatic Translation)
 no-element-sets-were-found=Ükski element komplekti ei leitud. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Ole ei leitud. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Salvesta vorm (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Salvestamine (Automatic Translation)
 script-file=Skriptifaili (Automatic Translation)
-section-field-type-label=Väljade rühm (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Valige olemasolev vorm või kuvada selle rakenduse lisamine. (Automatic Translation)
 select-field-type-description=Valige loendist soovitud suvandid. (Automatic Translation)
 select-field-type-label=Valige loendist (Automatic Translation)
