--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_eu.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Customized Elements (Automatic Copy)
 field-types-sidebar-title=Add Elements (Automatic Copy)
 field-validation-failed=A custom field validation failed. (Automatic Copy)
 field-visibility-expression=Field Visibility Expression (Automatic Copy)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Filter Parameter Name (Automatic Copy)
 form-entries=Form Entries (Automatic Copy)
 form-settings=Form Settings (Automatic Copy)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Jump to Page (Automatic Copy)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Keyword (Automatic Copy)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Leave form? (Automatic Copy)
 leave-page=Utzi
 manage-templates=Txantiloiak Kudeatu
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=No, continue. (Automatic Copy)
 no-data-providers-were-found=No data providers were found. (Automatic Copy)
 no-element-sets-were-found=No element sets were found. (Automatic Copy)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=No forms were found. (Automatic Copy)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Save Form (Automatic Copy)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Saving (Automatic Copy)
 script-file=Script File (Automatic Copy)
-section-field-type-label=Fields Group (Automatic Copy)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Select an existing form or add a form to be displayed in this application. (Automatic Copy)
 select-field-type-description=Select options from a list. (Automatic Copy)
 select-field-type-label=Select from List (Automatic Copy)
