--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=سفارشی عناصر (Automatic Translation)
 field-types-sidebar-title=اضافه کردن عناصر (Automatic Translation)
 field-validation-failed=اعتبار فیلد کاربر نامعتبر است.
 field-visibility-expression=عبارت قابل مشاهده فیلد
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=نام پارامتر فیلتر (Automatic Translation)
 form-entries=پست‌های فرم
 form-settings=تنظیمات فرم
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=رفتن به صفحه (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=کلمات کلیدی
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=فرم کند؟ (Automatic Translation)
 leave-page=انصراف از عضویت سایت
 manage-templates=مدیریت قالب ها
@@ -210,6 +212,7 @@ new-x-form-submitted=فرم جدید {0} تایید شد.
 no-continue=نه. ادامه بده.
 no-data-providers-were-found=ارائه دهنده تاریخ یافت نشد.
 no-element-sets-were-found=هیچ مجموعه عنصر یافت نشد. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=فرمی یافت نشد.
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=ذخيره فرم
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=در حال ذخیره
 script-file=فایل اسکریپت
-section-field-type-label=زمینه های گروه (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=یک فرم انتخاب و یا اضافه کنید تا در این اپلیکیشن نمایش داده شود.
 select-field-type-description=گزینه ها را از لیست انتخاب کنید. (Automatic Translation)
 select-field-type-label=از لیست انتخاب کنید (Automatic Translation)
