--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Mukautetut Elementit
 field-types-sidebar-title=Lisää Elementit
 field-validation-failed=Mukautetun kentän vahvistus epäonnistui.
 field-visibility-expression=Kentän näkyvyyden lauseke.
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Suodata Parametrin Nimi
 form-entries=Lomakekirjaukset
 form-settings=Lomakkeen asetukset
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Siirry Sivulle
 jump-to-page-x=Siirry Sivulle {0}
 keyword=Avainsana
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Poistu lomakkeelta?
 leave-page=Poistu
 manage-templates=Hallinnoi esitysmalleja
@@ -210,6 +212,7 @@ new-x-form-submitted=Uusi {0} lomake on tallennettu
 no-continue=Ei, jatka.
 no-data-providers-were-found=Tietolähteitä ei ole määritelty.
 no-element-sets-were-found=Elementtisarjoja ei löytynyt.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Lomakkeita ei löydy
 no-value-is-defined-for-field-x=Ei arvoa määritetty kentälle {0}.
 no-x-were-found=Kohteita {0} ei löytynyt.
@@ -270,7 +273,6 @@ save-form=Tallenna Lomake
 saved-x=Tallennetu &#149; {0}
 saving=Tallentaa
 script-file=Skripti-tiedosto
-section-field-type-label=Kentät-ryhmä
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Valitse olemassa oleva lomake tai lomake näytettäväksi tässä sovelluksessa.
 select-field-type-description=Valitse tai useampia vaihtoehtoja luettelosta.
 select-field-type-label=Valitse Luettelosta
