--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Éléments personnalisés
 field-types-sidebar-title=Ajouter des éléments
 field-validation-failed=Une validation de champ personnalisé a échoué.
 field-visibility-expression=Champs expression de visibilité
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nom du paramètre de filtre
 form-entries=Entrées du formulaire
 form-settings=Paramètres de formulaire
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Aller à la page
 jump-to-page-x=Aller à la page {0}
 keyword=Mot-clé
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Quitter le formulaire ?
 leave-page=Laisser
 manage-templates=Gérer les gabarits
@@ -210,6 +212,7 @@ new-x-form-submitted=Nouveau {0} formulaire soumis
 no-continue=Non, continuer.
 no-data-providers-were-found=Aucun fournisseur de données n'a été trouvée.
 no-element-sets-were-found=Aucun jeu d'éléments n'a été trouvé.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Aucun formulaire n'a été trouvé.
 no-value-is-defined-for-field-x=Aucune valeur est attribuée au champ {0}.
 no-x-were-found=Aucun {0} n'a été trouvé.
@@ -270,7 +273,6 @@ save-form=Enregistrer le formulaire
 saved-x=Enregistré &#149; {0}
 saving=en cours d'enregistrement
 script-file=Fichier de script
-section-field-type-label=Groupe de champs
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Sélectionner un formulaire existant ou ajouter un formulaire pour être afficher dans cette application.
 select-field-type-description=Choisissez une ou plusieurs options de la liste.
 select-field-type-label=Sélectionnez dans la liste
