--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hi_IN.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=अनुकूलित तत्व (Automatic
 field-types-sidebar-title=तत्व जोड़ें (Automatic Translation)
 field-validation-failed=एक कस्टम फ़ील्ड सत्यापन विफल हुआ। (Automatic Translation)
 field-visibility-expression=फ़ील्ड दृश्यता अभिव्यक्ति (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=फ़िल्टर पैरामीटर नाम (Automatic Translation)
 form-entries=प्रपत्र प्रविष्टियाँ (Automatic Translation)
 form-settings=प्रपत्र सेटिंग्स (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=पृष्ठ पर जाएँ (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=खोजशब्द (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=प्रपत्र छोड़ दें? (Automatic Translation)
 leave-page=छोडो
 manage-templates=नमूने को मेनेज करना
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=नहीं, जारी है। (Automatic Translation)
 no-data-providers-were-found=कोई डेटा प्रदाताओं नहीं मिले। (Automatic Translation)
 no-element-sets-were-found=कोई तत्व सेट नहीं मिले । (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=कोई फार्म नहीं मिले। (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=प्रपत्र सहेजें (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=बचत (Automatic Translation)
 script-file=स्क्रिप्ट फ़ाइल (Automatic Translation)
-section-field-type-label=फील्ड्स समूह (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=किसी मौजूदा प्रपत्र का चयन करें या इस अनुप्रयोग में प्रदर्शित करने के लिए एक फार्म जोड़ें। (Automatic Translation)
 select-field-type-description=किसी सूची से विकल्प ों का चयन करें। (Automatic Translation)
 select-field-type-label=सूची से चयन करें (Automatic Translation)
