--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=カスタム要素
 field-types-sidebar-title=要素を追加
 field-validation-failed=カスタムフィールドのバリデーションが失敗しました。
 field-visibility-expression=フィールドの可視/不可視
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=パラメータ名で絞り込む
 form-entries=フォームエントリー
 form-settings=フォームの設定
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=ページへ移動
 jump-to-page-x=ページ{0} へ移動
 keyword=キーワード
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=フォームから移動しますか？
 leave-page=このページを離れる
 manage-templates=テンプレートの管理
@@ -210,6 +212,7 @@ new-x-form-submitted=新規 の{0}フォームが送信されました。
 no-continue=いいえ、続けます
 no-data-providers-were-found=データープロバイダーが見つかりません。
 no-element-sets-were-found=要素セットが見つかりませんでした。
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=フォームが見つかりません
 no-value-is-defined-for-field-x=フィールド{0}の値が定義されていません
 no-x-were-found={0} が見つかりませんでした。
@@ -270,7 +273,6 @@ save-form=フォームを保存
 saved-x=保存済み &#149; {0}
 saving=保存中
 script-file=スクリプトファイル
-section-field-type-label=フィールドグループ
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=既存のフォームを選択して表示するか、新規フォームを追加してください。
 select-field-type-description=複数の選択肢からプルダウンで選択します
 select-field-type-label=プルダウン
