--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Elementos personalizados
 field-types-sidebar-title=Adicionar elementos
 field-validation-failed=Falha na validação de campo personalizado.
 field-visibility-expression=Expressão de Visibilidade do Campo
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nome do parâmetro filtro
 form-entries=Entradas do formulário
 form-settings=Configurações do Formulário
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Pular para a página
 jump-to-page-x=Pular para a página {0}
 keyword=Teclado
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Sair do formulário?
 leave-page=Deixar
 manage-templates=Gerenciar Modelos
@@ -210,6 +212,7 @@ new-x-form-submitted=Novo Formulário {0} Submetido
 no-continue=Não, continuar.
 no-data-providers-were-found=Nenhum provedor de dados foi encontrado.
 no-element-sets-were-found=Nenhum conjunto de elementos foi encontrado.
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Nenhum formulário foi encontrado.
 no-value-is-defined-for-field-x=Nenhum valor foi informado para o campo {0}.
 no-x-were-found=Nenhum(a) {0} encontrado(a).
@@ -270,7 +273,6 @@ save-form=Salvar Formulário
 saved-x=Salvo &#149; {0}
 saving=Salvando
 script-file=Script
-section-field-type-label=Grupo de Campos
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selecione um formulário existente ou adicione um novo.
 select-field-type-description=Escolher um ou mais opções de uma lista.
 select-field-type-label=Selecionar da lista
