--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Elementos personalizados (Automatic Translation)
 field-types-sidebar-title=Adicionar elementos (Automatic Translation)
 field-validation-failed=A validação de um campo personalizado falhou.
 field-visibility-expression=Expressão de Visibilidade do Campo
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nome de parâmetro de filtro (Automatic Translation)
 form-entries=Entradas de Formulário
 form-settings=Configurações do Formulário
@@ -188,6 +189,7 @@ json[stands-for]=JSON
 jump-to-page=Ir para página (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Palavra-chave (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Embora o formulário? (Automatic Translation)
 leave-page=Deixar
 manage-templates=Gerir Templates
@@ -210,6 +212,7 @@ new-x-form-submitted={0} novos formulários submetidos
 no-continue=Não, continuar.
 no-data-providers-were-found=Não foram encontrados fornecedores de dados.
 no-element-sets-were-found=Nenhum elemento foram encontradas. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Nenhum formulário foi encontrado.
 no-value-is-defined-for-field-x=Não há valor definido para o campo {0}.
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Salvar o formulário (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Salvando
 script-file=Script
-section-field-type-label=Grupo Fields (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selecione um formulário existente ou adicione um formulário para ser apresentado nesta aplicação.
 select-field-type-description=Selecione opções de uma lista. (Automatic Translation)
 select-field-type-label=Selecione da lista (Automatic Translation)
