--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ru.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Настроенные элементы (Automat
 field-types-sidebar-title=Добавление элементов (Automatic Translation)
 field-validation-failed=Ошибка проверки настраиваемого поля. (Automatic Translation)
 field-visibility-expression=Выражение поля видимости (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Имя параметра фильтра (Automatic Translation)
 form-entries=Форма записи (Automatic Translation)
 form-settings=Параметры формы (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Перейти на страницу (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ключевое слово (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Оставьте форму? (Automatic Translation)
 leave-page=Выйти
 manage-templates=Настроить Шаблоны
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Нет, по-прежнему. (Automatic Translation)
 no-data-providers-were-found=Поставщики данных не были найдены. (Automatic Translation)
 no-element-sets-were-found=Нет наборов элементов были найдены. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Нет формы были найдены. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Сохранение формы (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Сохранение (Automatic Translation)
 script-file=Файл скрипта
-section-field-type-label=Филдс Групп (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Выберите существующую форму или добавить форму для отображения в этом приложении. (Automatic Translation)
 select-field-type-description=Выберите варианты из списка. (Automatic Translation)
 select-field-type-label=Выберите из списка (Automatic Translation)
