--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sk.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Vlastné prvky (Automatic Translation)
 field-types-sidebar-title=Pridať prvky (Automatic Translation)
 field-validation-failed=Vlastné pole overenie zlyhalo. (Automatic Translation)
 field-visibility-expression=Pole viditeľnosti výraz (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Parameter Názov filtra (Automatic Translation)
 form-entries=Formulár položky (Automatic Translation)
 form-settings=Nastavenie formulára (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Prejsť na stranu (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Kľúčové slovo (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Ponechať formulár? (Automatic Translation)
 leave-page=Opustiť
 manage-templates=Spravovať šablóny
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=No, pokračovať. (Automatic Translation)
 no-data-providers-were-found=Nenašli sa žiadni poskytovatelia údajov.
 no-element-sets-were-found=Nenašli sa žiadne prvok množiny. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Nenašli sa žiadne formuláre.
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Uložiť formulár (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Ukladanie (Automatic Translation)
 script-file=Skriptový súbor
-section-field-type-label=Skupiny polí (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Vyberte existujúci formulár alebo pridajte formulár, ktorý sa má zobraziť v tejto aplikácii.
 select-field-type-description=Vyberte položku Voľby zo zoznamu. (Automatic Translation)
 select-field-type-label=Vyberte zo zoznamu (Automatic Translation)
