--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=องค์ประกอบที่กำห
 field-types-sidebar-title=เพิ่มองค์ประกอบ (Automatic Translation)
 field-validation-failed=การตรวจสอบฟิลด์แบบกำหนดเองล้มเหลว (Automatic Translation)
 field-visibility-expression=มองเห็นเขตข้อมูลนิพจน์ (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=ชื่อพารามิเตอร์ตัวกรอง (Automatic Translation)
 form-entries=แบบฟอร์มรายการ (Automatic Translation)
 form-settings=การตั้งค่าแบบฟอร์ม (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=ไปที่หน้า (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=คำสำคัญ (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=ออกจากแบบฟอร์มหรือไม่ (Automatic Translation)
 leave-page=ปล่อยให้ (Automatic Translation)
 manage-templates=จัดการแม่แบบ (Automatic Translation)
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=ไม่ ดำเนินการต่อไป (Automatic Translation)
 no-data-providers-were-found=ผู้ให้บริการข้อมูลไม่พบ (Automatic Translation)
 no-element-sets-were-found=ชุดองค์ประกอบไม่พบ (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=แบบฟอร์มไม่พบ (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=บันทึกฟอร์ม (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=ประหยัด (Automatic Translation)
 script-file=แฟ้มสคริปต์ (Automatic Translation)
-section-field-type-label=กลุ่มฟิลด์ (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=เลือกฟอร์มที่มีอยู่ หรือเพิ่มแบบฟอร์มจะแสดงในโปรแกรมนี้ (Automatic Translation)
 select-field-type-description=เลือกตัวเลือกจากรายการ (Automatic Translation)
 select-field-type-label=เลือกจากรายการ (Automatic Translation)
