--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_uk.properties
@@ -147,6 +147,7 @@ field-types-customized-elements=Настроєних елементів (Automat
 field-types-sidebar-title=Додати елементи (Automatic Translation)
 field-validation-failed=Не вдалося перевірити настроюване поле. (Automatic Translation)
 field-visibility-expression=Видимість поля виразу (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Ім'я параметра фільтр (Automatic Translation)
 form-entries=Записи форм (Automatic Translation)
 form-settings=Параметри форми (Automatic Translation)
@@ -188,6 +189,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Перейти до сторінки (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ключове слово (Automatic Translation)
+last-entry-sent-x=Last entry sent {0} (Automatic Copy)
 leave-form=Залишити форми? (Automatic Translation)
 leave-page=Вийти
 manage-templates=Управління шаблонами
@@ -210,6 +212,7 @@ new-x-form-submitted=New {0} Form Submitted (Automatic Copy)
 no-continue=Ні, продовжити. (Automatic Translation)
 no-data-providers-were-found=Немає постачальників даних не знайдено. (Automatic Translation)
 no-element-sets-were-found=Не встановлює елемент не знайдено. (Automatic Translation)
+no-entry-submitted-yet=No entry submitted yet. (Automatic Copy)
 no-forms-were-found=Ні форми не виявлено. (Automatic Translation)
 no-value-is-defined-for-field-x=No value is defined for field {0}. (Automatic Copy)
 no-x-were-found=No {0} were found. (Automatic Copy)
@@ -270,7 +273,6 @@ save-form=Зберегти форму (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Збереження (Automatic Translation)
 script-file=Файл сценарію (Automatic Translation)
-section-field-type-label=Група полів (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Виберіть наявну форму або додати форму для відображення в цьому додатку. (Automatic Translation)
 select-field-type-description=Виберіть параметри зі списку. (Automatic Translation)
 select-field-type-label=Виберіть зі списку (Automatic Translation)
